# Frontdown

./: .gitignore  .pre-commit-config.yaml  .project  DOCUMENTATION.md  README.md  TODO.md  applyActions.py  backup.py  backup_job.py  backup_procedures.py  basics.py  benchmark.py  c-users-scan-only.json  config_files.py  constants.py  default.config.json  example-config.json  file_methods.py  htmlGeneration.py  html_testfile.html  large_path.py  progressBar.py  pydantic-tests.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  statistics.py  strip_comments_json.py  template.html  test-config.json  test-setup-linux.json  test-setup.json  test-temp.json  test_file_methods.py
example_output_old/: actions.html  actions.json  log.txt  metadata.json
integration_test_setup/: pre-run-cleanup.py  test-config.json  test-setup.json
src/: backup.py  migrate_backup.py
src/Frontdown/: applyActions.py  backup.py  backup_job.py  backup_procedures.py  basics.py  benchmark.py  config_files.py  data_sources.py  file_methods.py  htmlGeneration.py  power_mgmt.py  progressBar.py  run_backup.py  statistics_module.py  strip_comments_json.py  template.html
src/Frontdown/PortableDevices/: PortableDevices.py  __init__.py  portdev_tests.py
tests/: pre_run_cleanup.py  run_integration_test.py  test-config.json  test_config_files.py  test_file_methods.py  test_format_bytes.py  test_strip_comments_json.py
tests/integration_test/: integration-test-config.json  metadata-integration-test.json  pre_run_cleanup.py  run_integration_test.py
tests/integration_test_setup/: metadata-integration-test.json  test-setup.json
