[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# fix discovery errors: tell pytest to ignore the integration test setup
addopts = "--cov=Frontdown --ignore=tests/integration_test"
testpaths= [
    "tests",
]

# see https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
# Warning: Changes here will only be recognized by pre-commit if pyproject.toml is staged
[tool.mypy]
mypy_path = "./src"
exclude = [
    'benchmark\.py$',
    # disable for now, fix later
    'tests\.py$',
]
# strict=true
# The following are implied by strict=true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

# [[tool.mypy.overrides]]
# module = [
#     'wx',
#     'wxasync',+
#     'pubsub',
#     'aioconsole']
# ignore_missing_imports=true