[tool.poetry]
name = "frontdown"
version = "0.1.0"
description = "hardlink backup tool"
authors = []
readme = "README.md"
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.13"
comtypes = { version = "^1.4.7", markers = "sys_platform == 'win32'" }
pydantic = "^1.9.0" # TODO: migrate 


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
pre-commit = "^3.8.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
mypy = "^1.11.2"
pyftpdlib = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# fix discovery errors: tell pytest to ignore the integration test setup
addopts = "--cov=Frontdown --ignore=tests/integration_test"
testpaths= [
    "tests",
]

# see https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
# Warning: Changes here will only be recognized by pre-commit if pyproject.toml is staged
[tool.mypy]
mypy_path = "./src"
exclude = [
    'benchmark\.py$',
    # disable for now, fix later
    'tests\.py$',
    'PortableDevices_original\.py$'
]
# strict=true
# The following are implied by strict=true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

# TODO: still needed?
# [[tool.mypy.overrides]]
# module = [
#     'wx',
#     'wxasync',+
#     'pubsub',
#     'aioconsole']
# ignore_missing_imports=true
