[metadata]
name = Frontdown
description = hardlink backup tool
license = GNUv3
license_file = LICENSE.txt
platforms = linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    

[options]
packages = Frontdown
install_requires =
    pydantic>=1.9.0,
    "comtypes >= 1.1.14 ; sys_platform=='win32'"
python_requires = ==3.10.*
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing =
    autopep8>=2.18.1
    flake8>=4.0.1
    tox>=3.24.5
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    pyftpdlib>=1.5.6

[options.package_data]
Frontdown = py.typed

[flake8]
max-line-length = 160
# flake8 disabled temporarily
# exclude = src/Frontdown/PortableDevices/*